# devcontainer-features

./: .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  TESTING.md  justfile  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json  post-create.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yaml  validate.yml
features/claude-code/: devcontainer-feature.json  install.sh  scenarios.json  statusline.sh
features/just/: install.sh  scenarios.json
features/nvidia-container-toolkit/: devcontainer-feature.json  scenarios.json
src/act/: NOTES.md  README.md  devcontainer-feature.json  install.sh
src/agentcore/: NOTES.md  README.md  devcontainer-feature.json  install.sh
src/aws-sam-cli/: NOTES.md  README.md  devcontainer-feature.json  install.sh
src/bash-language-server/: README.md  devcontainer-feature.json  install.sh
src/claude-code/: NOTES.md  README.md  devcontainer-feature.json  install.sh  statusline.sh
src/gitlab-ci-local/: NOTES.md  README.md  devcontainer-feature.json  install.sh
src/just/: NOTES.md  README.md  devcontainer-feature.json  install.sh
src/kiro/: README.md  devcontainer-feature.json  install.sh
src/kiro-cli/: NOTES.md  README.md  devcontainer-feature.json  install.sh
src/nvidia-container-toolkit/: NOTES.md  README.md  devcontainer-feature.json  install.sh
src/prek/: NOTES.md  README.md  install.sh  (+1 more)
test/: Dockerfile.arm64  dev-container-features-test-lib
tests/: conftest.py  test_features_devcontainer.py  test_features_docker.py
(+40 files in other folders)
