[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[project]
name = "devcontainer-features"
version = "0.1.0"
description = ""
authors = [{ name = "", email = "" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
]

[project.scripts]
devcontainer-features = "devcontainer_features.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "pytest-timeout>=2",
    "ruff",
    "ty",
]

[tool.uv]
package = true
exclude-newer = "3d"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=devcontainer_features --cov-report=term-missing --cov-report=xml"
asyncio_mode = "auto"
markers = [
    "docker: tests using raw Docker builds",
    "devcontainer_cli: tests using devcontainer CLI builds",
    "slow: slow integration tests requiring Docker",
]

[tool.coverage.run]
branch = true
source = ["devcontainer_features"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
